@@ -1,3 +1,5 @@
 pub/*
 makefly.rc
 README.html
+mbackup/*
+tmp/*
